--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-bg: #6ba6ff;
-  --secondary-bg: #714cba;
+  --primary-bg: #fddbbb;
+  --secondary-bg: #fff9bf;
   --text-color: #333;
   --button-bg: #333;
   --button-hover-bg: #555;
