--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,11 @@ h1 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+/* ALERT */
+#alert {
+  color: red;
+}
+
 /* INPUT, LABEL AND UL/LI */
 .input-container {
   display: flex;
